...
    }

    @OptIn(ExperimentalUuidApi::class)
    fun onSaveRack() {
        val currentState = _uiState.value
        if (currentState.name.isBlank()) {
            _uiState.update { state -> state.copy(error = "Name is required") }
            return
        }

        viewModelScope.launch {
            _uiState.update { state -> state.copy(isLoading = true, error = null) }

...
