...
                },
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = onAddRackSelect,
                modifier = Modifier.testTag("rackListAddRackFab"),
                shape = RoundedCornerShape(Dimens.fabCornerRadius),
            ) {
                Text("+")
            }
        },
    ) { paddingValues ->
...
